--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <!-- header -->
-  <nav class="py-2 bg-body-tertiary border-bottom asd">
+  <nav class="py-2 bg-body-tertiary border-bottom asd ">
 
     <div class="container d-flex flex-wrap asd">
       <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0 asd">
@@ -57,6 +57,8 @@
 
   <h1 id="h1-index">Banco Gato</h1>
 
+  <div class="row featurette container contenedor-apis">
+
   <h2 class="tituloCotizacion">Cotizaciones Dolar </h2>
 
   <div id="divDolar" class="container">
@@ -71,33 +73,26 @@
     
   </div>
 
-
-  <div class="divHeroe container">
-
-    <img class="imgHeroe"
-      src="https://d31dn7nfpuwjnm.cloudfront.net/images/valoraciones/0032/9225/que-es-una-tarjeta-prepagada.png?1548244426"
-      alt="credit card"> </img>
-
-    <div class="divParrafos">
-
-      <p class="p1Heroe lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, doloremque. Porro odio
-        modi
-        excepturi, voluptas earum fuga minima repellat doloribus aliquid. Provident quas reiciendis molestiae dolore
-        soluta veritatis sapiente mollitia.</p>
-      <p class="p2Heroe lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem accusantium
-        repellat
-        aliquid iusto laudantium hic, similique itaque ab illum magni a quisquam labore vero necessitatibus beatae sint
-        nisi minima maxime.</p>
+  <div class="container col-xxl-8 px-4 py-5">
+    <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+      <div class="col-10 col-sm-8 col-lg-6">
+        <img src="https://static.eldiario.es/clip/36e89e8b-3d44-49da-88a5-2ef53d0b2b6f_16-9-discover-aspect-ratio_default_0.jpg" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
+      </div>
+      <div class="col-lg-6">
+        <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Saca tu tarjeta Ahora!</h1>
+        <p class="lead">   ¡Llevate tu cuenta 100% bonificada y hasta $100.000 de regalo! Traé tu sueldo y empezá a disfrutar de los
+          beneficios</p>
+        <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+          <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Conoce Mas</button>
+        </div>
+      </div>
     </div>
-
-    <button class="btnHeroe"> Conoce Mas</button>
-
   </div>
 
 
   <!-- xxx -->
   <div class="container px-4 py-5" id="featured-3">
-    <h2 class="pb-2 border-bottom">Columns with icons</h2>
+    <h2 class="pb-2 border-bottom">Beneficios por ser socio Cat</h2>
     <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
       <div class="feature col">
         <div
@@ -106,9 +101,8 @@
             <use xlink:href="#collection"></use>
           </svg>
         </div>
-        <h3 class="fs-2">Featured title</h3>
-        <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and
-          probably just keep going until we run out of words.</p>
+        <h3 class="fs-2">Cajas de Ahorros</h3>
+        <p>Te ofrecemos la posibilidad de abrir tu cuenta 100% online, sin acercarte a una sucursal. Si ya sos cliente, podés realizar la apertura por Home Banking. Si aún no sos cliente, podés hacerlo a través de la app móvil Cat Bank+.</p>
         <a href="#" class="icon-link">
           Call to action
           <svg class="bi">
@@ -123,9 +117,8 @@
             width="1em" height="1em">
           <use xlink:href="#people-circle"></use></img>
         </div>
-        <h3 class="fs-2">Featured title</h3>
-        <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and
-          probably just keep going until we run out of words.</p>
+        <h3 class="fs-2">Cuenta Corriente</h3>
+        <p>La cuenta que te otorga todo el respaldo y la seguridad que necesitás para administrar tu dinero. Podés iniciar la apertura de tu cuenta corriente de manera online.</p>
         <a href="#" class="icon-link">
           Call to action
           <svg class="bi">
@@ -140,9 +133,8 @@
             <use xlink:href="#toggles2"></use>
           </svg>
         </div>
-        <h3 class="fs-2">Featured title</h3>
-        <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and
-          probably just keep going until we run out of words.</p>
+        <h3 class="fs-2">Prestamos para jubilados</h3>
+        <p>Conozca las diferentes líneas de créditos personales que Banco Nacion tiene para ofrecerte.</p>
         <a href="#" class="icon-link">
           Call to action
           <svg class="bi">
@@ -166,9 +158,8 @@
           preserveAspectRatio="xMidYMid slice" focusable="false">
         <title>Placeholder</title>
         <rect width="100%" height="100%" fill="var(--bs-secondary-color)" /></img>
-        <h2 class="fw-normal">Heading</h2>
-        <p>Some representative placeholder content for the three columns of text below the carousel. This is the first
-          column.</p>
+        <h2 class="fw-normal">Prestamos para tu Local</h2>
+        <p>Ncesitas renovar tu local? Con nosotros podes.</p>
         <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
@@ -178,8 +169,8 @@
           preserveAspectRatio="xMidYMid slice" focusable="false">
         <title>Placeholder</title>
         <rect width="100%" height="100%" fill="var(--bs-secondary-color)" /></img>
-        <h2 class="fw-normal">Heading</h2>
-        <p>Another exciting bit of representative placeholder content. This time, we've moved on to the second column.
+        <h2 class="fw-normal">Prestamo para tu auto</h2>
+        <p>Prestamo a tasa fija para que cambies tu auto!.
         </p>
         <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
@@ -190,8 +181,8 @@
           preserveAspectRatio="xMidYMid slice" focusable="false">
         <title>Placeholder</title>
         <rect width="100%" height="100%" fill="var(--bs-secondary-color)" /></img>
-        <h2 class="fw-normal">Heading</h2>
-        <p>And lastly this, the third column of representative placeholder content.</p>
+        <h2 class="fw-normal">Inversiones</h2>
+        <p>Amplio abanico de inversiones.</p>
         <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
     </div><!-- /.row -->
