--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="shortcut icon" href="./img/faviconFinal.png" type="image/x-icon">
   <link rel="stylesheet" href="./css/styles.css">
   <title>Banco Gato</title>
 </head>
@@ -45,7 +46,7 @@
       <a href="./pages/login.html">
         <button type="button" class="btn btn-outline-primary me-2  bottonLogingNav" id="btnLogin">Login</button>
         </a>
-        <a href="./SignUp.html">
+        <a href="./pages/SignUp.html">
           <button type="button" class="btn btn-primary bottonSignUpNav" id="btnSignUp">Sign-up</button>
         </a>
       </form>
@@ -57,7 +58,7 @@
 
   <h1 id="h1-index">Banco Gato</h1>
 
-  <div class="row featurette container contenedor-apis">
+  <div class="contenedor-apis">
 
   <h2 class="tituloCotizacion">Cotizaciones Dolar </h2>
 
@@ -72,6 +73,8 @@
   <div id="dataCripto" class="container">
     
   </div>
+
+  
 
   <div class="container col-xxl-8 px-4 py-5">
     <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
@@ -314,7 +317,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
     crossorigin="anonymous"></script>
-  <script src="./js/main.js"></script>
+    <script src="./js/dom.js"></script>
+  <script src="./js/index.js"></script>
 </body>
 
 </html>
