--- a/pages/aboutUs.html
+++ b/pages/aboutUs.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="shortcut icon" href="../img/faviconFinal.png" type="image/x-icon">
   <link rel="stylesheet" href="../css/styles.css">
   <title>About Us</title>
 </head>
@@ -271,7 +272,7 @@
     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
     crossorigin="anonymous"></script>
 
-  <script src="../js/main.js"></script>
+  <script src="../js/dom.js"></script>
 </body>
 
 </html>
