--- a/pages/profile.html
+++ b/pages/profile.html
@@ -11,6 +11,7 @@
     <link href="/dist/main.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+        <link rel="shortcut icon" href="../img/faviconFinal.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/styles.css">
     <title>Profile </title>
 </head>
@@ -57,7 +58,7 @@
 
     <main>
 
-        <main>
+        <main id="mainProfile">
 
             <section id="datosUsuario">
                 <h1>Informacion del usuario</h1>
@@ -125,8 +126,8 @@
         </main>
 
     </main>
-
-<script src="/js/main.js"></script>
+    <script src="../js/dom.js"></script>
+    <script src="../js/singUp.js"></script>
     <script src="/js/profile.js"></script>
 </body>
 
