primeros grandes pasos

--- a/pages/profile.html
+++ b/pages/profile.html
@@ -60,74 +60,14 @@
 
         <main id="mainProfile">
 
-            <section id="datosUsuario">
-                <h1>Informacion del usuario</h1>
-
-                <div>
-                    <h3>cambiar email</h3>
-                    <button id="btn-change-email">change</button>
-                    <div id="cambiar-email-container" style="display:none;">
-                        <label for="email-actual">Email actual:</label>
-                        <input type="text" id="email-actual" disabled>
-                        <label for="email-nuevo">Nuevo email:</label>
-                        <input type="text" id="email-nuevo">
-                        <button id="guardar-email-btn">save</button>
-                    </div>
-                </div>
-
-
-                <div>
-                    <h3>cambiar Username</h3>
-                    <button id="btn-change-username">change</button>
-                    <div id="cambiar-username-container" style="display:none;">
-                        <label for="username-actual">Actual Username</label>
-                        <input type="text" id="Actual-Username" disabled>
-                        <label for="username-nuevo">Nuevo Username</label>
-                        <input type="text" id="username-nuevo">
-                        <button>save</button>
-                    </div>
-                </div>
-
-
-                <div>
-                    <h3>cambiar Password</h3>
-                    <button id="btn-change-password">change</button>
-                    <div id="cambiar-password-container" style="display:none;">
-                            <label for="password-actual">Password Actual</label>
-                            <input type="text" id="password-actual" disabled>
-                            <label for="password-nueva">Nueva Password</label>
-                            <input type="text" id="password-nueva">
-                            <button>save</button>
-                        </div>
-                    </div>
-
-
-                    <div>
-                        <h3>Cambiar datos personales</h3>
-                        <button id="btn-change-details">change</button>
-                        <div id="cambiar-detalles-container" style="display:none;">
-                            <label for="actual-name">Actual Nombre</label>
-                            <input type="text" id="actual-name" disabled>
-                            <label for="nombre-nuevo">Nuevo Nombre</label>
-                            <input type="text" id="nombre-nuevo">
-                            <label for="actual-Lastname">Actual Nombre</label>
-                            <input type="text" id="actual-Lastname" disabled>
-                            <label for="lastname-nuevo">Nuevo Nombre</label>
-                            <input type="text" id="lastname-nuevo">
-                            <button>save</button>
-                        </div>
-                    </div>
-
-
-                    <button id="deslogearse">Dissconect</button>
-
+            <section id="divMostrarUsuarios">
+               
 
             </section>
         </main>
 
     </main>
     <script src="../js/dom.js"></script>
-    <script src="../js/singUp.js"></script>
     <script src="/js/profile.js"></script>
 </body>
 
