--- a/pages/login.html
+++ b/pages/login.html
@@ -17,10 +17,10 @@
   <div class="container">
     <header class="py-3 mb-4 border-bottom asd">
 
-      <p class="fs-4 tagTittle">Cat Bank</p>
       <div class="container d-flex flex-wrap justify-content-center">
         <a href="/" class="d-flex align-items-center mb-3 mb-lg-0 me-lg-auto link-body-emphasis text-decoration-none">
-          <img class="bi logo" src="../img/logo2.png" background-color="white" role="img" aria-label="Bootstrap">
+          <img class="bi logo" src="../img/Black_Cat_Vector.svg.png" background-color="white" role="img" aria-label="Bootstrap">
+          <h1 class="fs-4 tagTittle">Cat Bank</h1>
         </a>
         <div class="profile-container btn btn-outline-primary me-2" style="display: none;">
           <a href="">
@@ -29,7 +29,7 @@
         </a>
       </div>
       <form class="col-12 col-lg-auto mb-3 mb-lg-0" role="search" id="formLogging">
-        <a href="./userLogging.html">
+        <a href="">
           <button type="button" class="btn btn-outline-primary me-2  bottonLogingNav" id="btnLogin">Login</button>
           </a>
           <a href="./SignUp.html">
