--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <li><a href="./pages/aboutUs.html" class="nav-link px-2">About Us</a></li>
         <li><a href="./pages/calculator.html" class="nav-link px-2">Calculator</a></li>
         <li><a href="./pages/simulator.html" class="nav-link px-2">Loan simulator</a></li>
+        <li><a href="./pages/contact.html" class="nav-link px-2">Contact Us</a></li>
       </ul>
     </div>
 
@@ -31,10 +32,10 @@
 
   <header class="py-3 mb-4 border-bottom asd">
 
-    <p class="fs-4 tagTittle">Cat Bank</p>
     <div class="container d-flex flex-wrap justify-content-center">
       <a href="/" class="d-flex align-items-center mb-3 mb-lg-0 me-lg-auto link-body-emphasis text-decoration-none">
-        <img class="bi logo" src="../img/logo2.png" background-color="white" role="img" aria-label="Bootstrap">
+        <img class="bi logo" src="./img/Black_Cat_Vector.svg.png"  role="img" aria-label="Bootstrap">
+        <h1 class="fs-4 tagTittle">Cat Bank</h1>
       </a>
       <div class="profile-container btn btn-outline-primary me-2" id="profile-btn-index">
         <a href="./pages/profile.html">
@@ -265,33 +266,35 @@
   </div><!-- /.container -->
 
 
+
+
   <!-- footer -->
 
   <div class="container">
     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
       <div class="col-md-4 d-flex align-items-center">
-        <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
-          <svg class="bi" width="30" height="24">
+        <a href="../index.html" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
+          <img class="bi" src="../img/Black_Cat_Vector.svg.png" width="30" height="24">
             <use xlink:href="#bootstrap"></use>
-          </svg>
+        </img>
         </a>
-        <span class="mb-3 mb-md-0 text-body-secondary">© 2023 Company, Inc</span>
+        <span class="mb-3 mb-md-0 text-body-secondary">© 2023 Cat Bank Argentina S.A.</span>
       </div>
 
       <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-        <li class="ms-3"><a class="text-body-secondary" href="www.twitter.com/catBank"><svg class="bi" width="24"
-              height="24">
+        <li class="ms-3"><a class="text-body-secondary" href="www.twitter.com/Catbank"><svg class="bi" width="24" height="24">
               <use xlink:href="#twitter"></use>
             </svg></a></li>
-        <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24">
+        <li class="ms-3"><a class="text-body-secondary" href="www.instagram.com/CatBank"><svg class="bi" width="24" height="24">
               <use xlink:href="#instagram"></use>
             </svg></a></li>
-        <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24">
+        <li class="ms-3"><a class="text-body-secondary" href="www.facebook.com/Catbank"><svg class="bi" width="24" height="24">
               <use xlink:href="#facebook"></use>
             </svg></a></li>
       </ul>
     </footer>
   </div>
+
   <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
     <symbol id="bootstrap" viewBox="0 0 118 94">
       <title>Bootstrap</title>
@@ -312,6 +315,7 @@
         d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334 0-.14 0-.282-.006-.422A6.685 6.685 0 0 0 16 3.542a6.658 6.658 0 0 1-1.889.518 3.301 3.301 0 0 0 1.447-1.817 6.533 6.533 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.325 9.325 0 0 1-6.767-3.429 3.289 3.289 0 0 0 1.018 4.382A3.323 3.323 0 0 1 .64 6.575v.045a3.288 3.288 0 0 0 2.632 3.218 3.203 3.203 0 0 1-.865.115 3.23 3.23 0 0 1-.614-.057 3.283 3.283 0 0 0 3.067 2.277A6.588 6.588 0 0 1 .78 13.58a6.32 6.32 0 0 1-.78-.045A9.344 9.344 0 0 0 5.026 15z" />
     </symbol>
   </svg>
+
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
