--- a/pages/aboutUs.html
+++ b/pages/aboutUs.html
@@ -6,10 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
-    <link rel="shortcut icon" href="../img/faviconFinal.png" type="image/x-icon">
+  integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+  <link rel="shortcut icon" href="../img/faviconFinal.png" type="image/x-icon">
   <link rel="stylesheet" href="../css/styles.css">
+ 
   <title>About Us</title>
 </head>
 
@@ -17,21 +17,22 @@
   <!-- header -->
   <nav class="py-2 bg-body-tertiary border-bottom asd">
     <div class="container d-flex flex-wrap asd">
-      <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+      <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0 asd">
         <li><a href="../index.html" class="nav-link px-2 link-secondary">Home</a></li>
         <li><a href="../pages/aboutUs.html" class="nav-link px-2">About Us</a></li>
         <li><a href="../pages/calculator.html" class="nav-link px-2">Calculator</a></li>
         <li><a href="../pages/simulator.html" class="nav-link px-2">Loan simulator</a></li>
+        <li><a href="../pages/contact.html" class="nav-link px-2">Contact</a></li>
       </ul>
     </div>
   </nav>
 
   <header class="py-3 mb-4 border-bottom asd">
 
-    <p class="fs-4 tagTittle">Cat Bank</p>
     <div class="container d-flex flex-wrap justify-content-center">
       <a href="/" class="d-flex align-items-center mb-3 mb-lg-0 me-lg-auto link-body-emphasis text-decoration-none">
-        <img class="bi logo" src="../img/logo2.png" background-color="white" role="img" aria-label="Bootstrap">
+        <img class="bi logo" src="../img/Black_Cat_Vector.svg.png" background-color="white" role="img" aria-label="Bootstrap">
+        <h1 class="fs-4 tagTittle">Cat Bank</h1>
       </a>
       <div class="profile-container btn btn-outline-primary me-2" id="profile-btn" style="display: none;">
         <a href="">
@@ -52,7 +53,7 @@
   </header>
 
   <div class="relative isolate overflow-hidden bg-gray-900 py-24 sm:py-32">
-    <img src="https://images.unsplash.com/photo-1521737604893-d14cc237f11d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&crop=focalpoint&fp-y=.8&w=2830&h=1500&q=80&blend=111827&sat=-100&exp=15&blend-mode=multiply" alt="" class="absolute inset-0 -z-10 h-full w-full object-cover object-right md:object-center">
+    <img src="https://www.orangebank.fr/dam/jcr:caa3f1b4-985c-4ab9-96eb-70878cd80a13/Cpremium_banner_header_293x134.jpg" alt="" class="absolute inset-0 -z-10 h-full w-full object-cover object-right md:object-center">
     <div class="hidden sm:absolute sm:-top-10 sm:right-1/2 sm:-z-10 sm:mr-10 sm:block sm:transform-gpu sm:blur-3xl" aria-hidden="true">
       <div class="aspect-[1097/845] w-[68.5625rem] bg-gradient-to-tr from-[#ff4694] to-[#776fff] opacity-20" style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"></div>
     </div>
@@ -61,41 +62,110 @@
     </div>
     <div class="mx-auto max-w-7xl px-6 lg:px-8">
       <div class="mx-auto max-w-2xl lg:mx-0">
-        <h2 class="text-4xl font-bold tracking-tight text-white sm:text-6xl">Work with us</h2>
-        <p class="mt-6 text-lg leading-8 text-gray-300">Anim aute id magna aliqua ad ad non deserunt sunt. Qui irure qui lorem cupidatat commodo. Elit sunt amet fugiat veniam occaecat fugiat aliqua.</p>
+        <h2 class="text-4xl font-bold tracking-tight text-white sm:text-6xl">Acompañandote desde hace 40 años</h2>
+        <p class="mt-6 text-lg leading-8 text-gray-300">Por que nos conoces, siempre estamos a tu lado acompañando tu crecimiento.</p>
       </div>
       <div class="mx-auto mt-10 max-w-2xl lg:mx-0 lg:max-w-none">
         <div class="grid grid-cols-1 gap-x-8 gap-y-6 text-base font-semibold leading-7 text-white sm:grid-cols-2 md:flex lg:gap-x-10">
-          <a href="#">Open roles <span aria-hidden="true">&rarr;</span></a>
-          <a href="#">Internship program <span aria-hidden="true">&rarr;</span></a>
-          <a href="#">Our values <span aria-hidden="true">&rarr;</span></a>
-          <a href="#">Meet our leadership <span aria-hidden="true">&rarr;</span></a>
+          <a href="#">Inversiones <span aria-hidden="true">&rarr;</span></a>
+          <a href="#">Prestamos <span aria-hidden="true">&rarr;</span></a>
+          <a href="#">Transacciones <span aria-hidden="true">&rarr;</span></a>
+          <a href="#">Compra/Venta USD <span aria-hidden="true">&rarr;</span></a>
         </div>
         <dl class="mt-16 grid grid-cols-1 gap-8 sm:mt-20 sm:grid-cols-2 lg:grid-cols-4">
           <div class="flex flex-col-reverse">
-            <dt class="text-base leading-7 text-gray-300">Offices worldwide</dt>
-            <dd class="text-2xl font-bold leading-9 tracking-tight text-white">12</dd>
+            <dt class="text-base leading-7 text-gray-100">Sucursales</dt>
+            <dd class="text-2xl font-bold leading-9 tracking-tight text-white">250</dd>
           </div>
           <div class="flex flex-col-reverse">
-            <dt class="text-base leading-7 text-gray-300">Full-time colleagues</dt>
-            <dd class="text-2xl font-bold leading-9 tracking-tight text-white">300+</dd>
+            <dt class="text-base leading-7 text-gray-300">Creditos otorgados</dt>
+            <dd class="text-2xl font-bold leading-9 tracking-tight text-white">30.000+</dd>
           </div>
           <div class="flex flex-col-reverse">
-            <dt class="text-base leading-7 text-gray-300">Hours per week</dt>
-            <dd class="text-2xl font-bold leading-9 tracking-tight text-white">40</dd>
+            <dt class="text-base leading-7 text-gray-300">Clientes</dt>
+            <dd class="text-2xl font-bold leading-9 tracking-tight text-white">500.000+</dd>
           </div>
           <div class="flex flex-col-reverse">
-            <dt class="text-base leading-7 text-gray-300">Paid time off</dt>
-            <dd class="text-2xl font-bold leading-9 tracking-tight text-white">Unlimited</dd>
+            <dt class="text-base leading-7 text-gray-300 opacity-100">Empleados</dt>
+            <dd class="text-2xl font-bold leading-9 tracking-tight text-white">3.000+</dd>
           </div>
         </dl>
       </div>
     </div>
   </div>
   
-
-
-
+  <div class="bg-white py-24 sm:py-32">
+    <div class="mx-auto max-w-7xl px-6 lg:px-8">
+      <div class="mx-auto max-w-2xl lg:text-center">
+        <h2 class="text-base font-semibold leading-7 text-indigo-600">Banca #1 Argentina</h2>
+        <p class="mt-2 text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Todo lo que soñas lo podes hacer realidad</p>
+        <p class="mt-6 text-lg leading-8 text-gray-600">Disfrutá de todos los beneficios que tenemos para vos.</p>
+      </div>
+      <div class="mx-auto mt-16 max-w-2xl sm:mt-20 lg:mt-24 lg:max-w-4xl">
+        <dl class="grid max-w-xl grid-cols-1 gap-x-8 gap-y-10 lg:max-w-none lg:grid-cols-2 lg:gap-y-16">
+          <div class="relative pl-16">
+            <dt class="text-base font-semibold leading-7 text-gray-900">
+              <div class="absolute left-0 top-0 flex h-10 w-10 items-center justify-center rounded-lg bg-indigo-600">
+                <svg class="h-6 w-6 text-white" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M12 16.5V9.75m0 0l3 3m-3-3l-3 3M6.75 19.5a4.5 4.5 0 01-1.41-8.775 5.25 5.25 0 0110.233-2.33 3 3 0 013.758 3.848A3.752 3.752 0 0118 19.5H6.75z" />
+                </svg>
+              </div>
+              Cuenta Sueldo
+            </dt>
+            <dd class="mt-2 text-base leading-7 text-gray-600">Cobra con nustro banco y obtene cientos de beneficios por ser cliente de Cat Bank.</dd>
+          </div>
+          <div class="relative pl-16">
+            <dt class="text-base font-semibold leading-7 text-gray-900">
+              <div class="absolute left-0 top-0 flex h-10 w-10 items-center justify-center rounded-lg bg-indigo-600">
+                <svg class="h-6 w-6 text-white" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M16.5 10.5V6.75a4.5 4.5 0 10-9 0v3.75m-.75 11.25h10.5a2.25 2.25 0 002.25-2.25v-6.75a2.25 2.25 0 00-2.25-2.25H6.75a2.25 2.25 0 00-2.25 2.25v6.75a2.25 2.25 0 002.25 2.25z" />
+                </svg>
+              </div>
+              Seguridad en tus transacciones
+            </dt>
+            <dd class="mt-2 text-base leading-7 text-gray-600">Contamos con un servicio de maxima seguridad para que puedas gestionar con tu cuenta con total segurdidad.</dd>
+          </div>
+          <div class="relative pl-16">
+            <dt class="text-base font-semibold leading-7 text-gray-900">
+              <div class="absolute left-0 top-0 flex h-10 w-10 items-center justify-center rounded-lg bg-indigo-600">
+                <svg class="h-6 w-6 text-white" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M16.023 9.348h4.992v-.001M2.985 19.644v-4.992m0 0h4.992m-4.993 0l3.181 3.183a8.25 8.25 0 0013.803-3.7M4.031 9.865a8.25 8.25 0 0113.803-3.7l3.181 3.182m0-4.991v4.99" />
+                </svg>
+              </div>
+              Mantenete actualizado
+            </dt>
+            <dd class="mt-2 text-base leading-7 text-gray-600">Unite a nuestro canal de noticias oficiales para clientes.</dd>
+          </div>
+          <div class="relative pl-16">
+            <dt class="text-base font-semibold leading-7 text-gray-900">
+              <div class="absolute left-0 top-0 flex h-10 w-10 items-center justify-center rounded-lg bg-indigo-600">
+                <svg class="h-6 w-6 text-white" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M7.864 4.243A7.5 7.5 0 0119.5 10.5c0 2.92-.556 5.709-1.568 8.268M5.742 6.364A7.465 7.465 0 004.5 10.5a7.464 7.464 0 01-1.15 3.993m1.989 3.559A11.209 11.209 0 008.25 10.5a3.75 3.75 0 117.5 0c0 .527-.021 1.049-.064 1.565M12 10.5a14.94 14.94 0 01-3.6 9.75m6.633-4.596a18.666 18.666 0 01-2.485 5.33" />
+                </svg>
+              </div>
+              Seguridad Avanzada
+            </dt>
+            <dd class="mt-2 text-base leading-7 text-gray-600">Varios metodos de verificacion y recuperacion de cuenta. Conoce mas en la app Cat Bank+</dd>
+          </div>
+        </dl>
+      </div>
+    </div>
+  </div>
+  
+  <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg">
+    <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
+      <h1 class="display-4 fw-bold lh-1 text-body-emphasis">Contactate con nosotros</h1>
+      <p class="lead">Contamos con profesionales que podran asesorarte 24/7 los 365 dias del año, no dudes en comunicarte con nosotros.
+        Recuerda que nunca te pediremos tus contraseñas o informacion sensible!
+      </p>
+      <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
+        <button type="button" class="btn btn-primary btn-lg px-4 me-md-2 fw-bold">Contacto</button>
+      </div>
+    </div>
+    <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
+        <img class="rounded-lg-3" src="https://images.ctfassets.net/ex6ts2p2j0ib/6Pjg6HrVO8UcqSOA0mW84w/136a78c1993f189b81a37a698d45b438/App.jpg?fm=jpg&q=70" alt="" width="720">
+    </div>
+  </div>
 
 
 
@@ -104,22 +174,22 @@
   <div class="container">
     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
       <div class="col-md-4 d-flex align-items-center">
-        <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
-          <svg class="bi" width="30" height="24">
+        <a href="../index.html" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
+          <img class="bi" src="../img/Black_Cat_Vector.svg.png" width="30" height="24">
             <use xlink:href="#bootstrap"></use>
-          </svg>
+        </img>
         </a>
-        <span class="mb-3 mb-md-0 text-body-secondary">© 2023 Company, Inc</span>
+        <span class="mb-3 mb-md-0 text-body-secondary">© 2023 Cat Bank Argentina S.A.</span>
       </div>
 
       <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-        <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24">
+        <li class="ms-3"><a class="text-body-secondary" href="www.twitter.com/Catbank"><svg class="bi" width="24" height="24">
               <use xlink:href="#twitter"></use>
             </svg></a></li>
-        <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24">
+        <li class="ms-3"><a class="text-body-secondary" href="www.instagram.com/CatBank"><svg class="bi" width="24" height="24">
               <use xlink:href="#instagram"></use>
             </svg></a></li>
-        <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24">
+        <li class="ms-3"><a class="text-body-secondary" href="www.facebook.com/Catbank"><svg class="bi" width="24" height="24">
               <use xlink:href="#facebook"></use>
             </svg></a></li>
       </ul>
@@ -152,7 +222,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
     crossorigin="anonymous"></script>
-
+    <script src="https://cdn.tailwindcss.com"></script>
   <script src="../js/dom.js"></script>
 </body>
 
