--- a/pages/simulator.html
+++ b/pages/simulator.html
@@ -16,11 +16,12 @@
   <!-- header -->
   <nav class="py-2 bg-body-tertiary border-bottom asd">
     <div class="container d-flex flex-wrap asd">
-      <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+      <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0 asd">
         <li><a href="../index.html" class="nav-link px-2 link-secondary">Home</a></li>
         <li><a href="../pages/aboutUs.html" class="nav-link px-2">About Us</a></li>
         <li><a href="../pages/calculator.html" class="nav-link px-2">Calculator</a></li>
         <li><a href="../pages/simulator.html" class="nav-link px-2">Loan simulator</a></li>
+        <li><a href="../pages/contact.html" class="nav-link px-2">Contact</a></li>
       </ul>
     </div>
   </nav>
@@ -28,10 +29,11 @@
 
   <header class="py-3 mb-4 border-bottom asd">
 
-    <p class="fs-4 tagTittle">Cat Bank</p>
+
     <div class="container d-flex flex-wrap justify-content-center">
       <a href="/" class="d-flex align-items-center mb-3 mb-lg-0 me-lg-auto link-body-emphasis text-decoration-none">
-        <img class="bi logo" src="../img/logo2.png" background-color="white" role="img" aria-label="Bootstrap">
+        <img class="bi logo" src="../img/Black_Cat_Vector.svg.png" background-color="white" role="img" aria-label="Bootstrap">
+        <h1 class="fs-4 tagTittle">Cat Bank</h1>
       </a>
       <div class="profile-container btn btn-outline-primary me-2" id="profile-btn" style="display: none;">
         <a href="">
@@ -60,22 +62,22 @@
   <div class="container">
     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
       <div class="col-md-4 d-flex align-items-center">
-        <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
-          <svg class="bi" width="30" height="24">
+        <a href="../index.html" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
+          <img class="bi" src="../img/Black_Cat_Vector.svg.png" width="30" height="24">
             <use xlink:href="#bootstrap"></use>
-          </svg>
+        </img>
         </a>
-        <span class="mb-3 mb-md-0 text-body-secondary">© 2023 Company, Inc</span>
+        <span class="mb-3 mb-md-0 text-body-secondary">© 2023 Cat Bank Argentina S.A.</span>
       </div>
 
       <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-        <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24">
+        <li class="ms-3"><a class="text-body-secondary" href="www.twitter.com/Catbank"><svg class="bi" width="24" height="24">
               <use xlink:href="#twitter"></use>
             </svg></a></li>
-        <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24">
+        <li class="ms-3"><a class="text-body-secondary" href="www.instagram.com/CatBank"><svg class="bi" width="24" height="24">
               <use xlink:href="#instagram"></use>
             </svg></a></li>
-        <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24">
+        <li class="ms-3"><a class="text-body-secondary" href="www.facebook.com/Catbank"><svg class="bi" width="24" height="24">
               <use xlink:href="#facebook"></use>
             </svg></a></li>
       </ul>
