--- a/pages/profile.html
+++ b/pages/profile.html
@@ -16,7 +16,7 @@
     <title>Profile </title>
 </head>
 
-<body>
+<body id="bodyProfile">
     <!-- header -->
     <nav class="py-2 bg-body-tertiary border-bottom asd">
         <div class="container d-flex flex-wrap asd">
@@ -61,7 +61,7 @@
 
         <main id="mainProfile">
 
-            <section id="divMostrarUsuarios">
+            <section id="divMostrarUsuarios" class="relative isolate overflow-hidden bg-gray-900 py-24 sm:py-32">
                
 
             </section>
