--- a/pages/aboutUs.html
+++ b/pages/aboutUs.html
@@ -159,7 +159,7 @@
         Recuerda que nunca te pediremos tus contraseñas o informacion sensible!
       </p>
       <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
-        <button type="button" class="btn btn-primary btn-lg px-4 me-md-2 fw-bold">Contacto</button>
+        <button type="button" class="btn btn-primary btn-lg px-4 me-md-2 btnEspecial">Contacto</button>
       </div>
     </div>
     <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
