--- a/pages/login.html
+++ b/pages/login.html
@@ -29,7 +29,7 @@
         </a>
       </div>
       <form class="col-12 col-lg-auto mb-3 mb-lg-0" role="search" id="formLogging">
-        <a href="">
+        <a href="./profile.html">
           <button type="button" class="btn btn-outline-primary me-2  bottonLogingNav" id="btnLogin">Login</button>
           </a>
           <a href="./SignUp.html">
