mejorando y ordenando fetch y profile.js

--- a/index.html
+++ b/index.html
@@ -59,21 +59,21 @@
 
   <h1 id="h1-index">Banco Gato</h1>
 
-  <div class="contenedor-apis">
 
-  <h2 class="tituloCotizacion">Cotizaciones Dolar </h2>
+  <h2 class="tituloCotizacion">Cotizacion Dolar </h2>
 
-  <div id="divDolar" class="container">
+  <div id="divDolar" class="container"> 
 
   </div>
-  
 
+ 
+    <h2 class="tituloCotizacion">Cotizacion Criptos</h2>
 
-  <h2 class="tituloCotizacion">cotizacion de criptos</h2>
+    <div id="dataCripto" class="container">
+      
   
-  <div id="dataCripto" class="container">
-    
-  </div>
+    </div>
+
 
   
 
@@ -117,9 +117,9 @@
       <div class="feature col">
         <div
           class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
-          <img class="bi" src="https://www.bbva.com.ar/content/dam/public-web/global/images/icons/1_002_dollar.svg"
-            width="1em" height="1em">
-          <use xlink:href="#people-circle"></use></img>
+          <svg class="bi" width="1em" height="1em">
+            <use xlink:href="#collection"></use>
+          </svg>
         </div>
         <h3 class="fs-2">Cuenta Corriente</h3>
         <p>La cuenta que te otorga todo el respaldo y la seguridad que necesitás para administrar tu dinero. Podés iniciar la apertura de tu cuenta corriente de manera online.</p>
